terraform/amazon/templates/instance_pools/role_security_group.tf.template
{{/* vim: set ft=tf: */}}

{{ range .Roles -}}
# This is the security group for the role {{.Name}}
resource "aws_security_group" "{{.TFName}}" {
  name   = "${data.template_file.stack_name.rendered}-{{.DNSName}}"
  vpc_id = "${data.terraform_remote_state.network.vpc_id}"

  tags {
    Name        = "${data.template_file.stack_name.rendered}-{{.DNSName}}"
    Environment = "${var.environment}"
    Project     = "${var.project}"
    Contact     = "${var.contact}"
  }
}

{{ if .HasELB -}}
# This is the security group for the ELB of the role {{.Name}}
resource "aws_security_group" "{{.TFName}}_elb" {
  name   = "${data.template_file.stack_name.rendered}-{{.DNSName}}-elb"
  vpc_id = "${data.terraform_remote_state.network.vpc_id}"

  tags {
    Name        = "${data.template_file.stack_name.rendered}-{{.DNSName}}-elb"
    Environment = "${var.environment}"
    Project     = "${var.project}"
    Contact     = "${var.contact}"
  }
}

{{ if .AWS.ELBAPIPublic -}}
# This is the security group for the public API server ELB of {{.Name}}
resource "aws_security_group" "{{.TFName}}_elb_public" {
  name   = "${data.template_file.stack_name.rendered}-{{.DNSName}}-elb-public"
  vpc_id = "${data.terraform_remote_state.network.vpc_id}"

  tags {
    Name        = "${data.template_file.stack_name.rendered}-{{.DNSName}}-elb-public"
    Environment = "${var.environment}"
    Project     = "${var.project}"
    Contact     = "${var.contact}"
  }
}
resource "aws_security_group_rule" "{{.TFName}}_elb_public_egress_allow_all" {
  type              = "egress"
  protocol          = -1
  from_port         = 0
  to_port           = 65535
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.{{.TFName}}_elb_public.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_elb_public_ingress_allow_all_api" {
  type              = "ingress"
  protocol          = "tcp"
  from_port         = 443
  to_port           = 443
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.{{.TFName}}_elb_public.id}"
}
{{ end -}}
{{ end -}}

# Allow instance to access vault
resource "aws_security_group_rule" "vault_allow_vault_from_{{.TFName}}" {
  type                     = "ingress"
  from_port                = 8200
  to_port                  = 8200
  protocol                 = "tcp"
  source_security_group_id = "${aws_security_group.{{.TFName}}.id}"
  security_group_id        = "${data.terraform_remote_state.hub_vault.vault_security_group_id}"
}

# Allow instance to access wing server
resource "aws_security_group_rule" "bastion_allow_wing_from_{{.TFName}}" {
  type                     = "ingress"
  from_port                = 9443
  to_port                  = 9443
  protocol                 = "tcp"
  source_security_group_id = "${aws_security_group.{{.TFName}}.id}"
  security_group_id        = "${data.terraform_remote_state.hub_tools.bastion_security_group_id}"
}

{{ end -}}

{{ range $role, $rules := .AWSSGRules -}}
{{ range $rules -}}
# {{ .Comment }}
resource "aws_security_group_rule" "{{.Destination}}_allow_{{.Service}}
{{- if .Identifier }}{{ stringFromPointer .Identifier }}{{ end -}}
_{{- if eq .Direction "ingress" -}} from {{- else -}} to {{- end -}}
_{{.Source}}" {
  type                     = "{{.Direction}}"
  from_port                = {{.FromPort}}
  to_port                  = {{.ToPort}}
  protocol                 = "{{.Protocol}}"
{{ if .CIDRBlock -}}
  cidr_blocks              = ["{{CIDRToString .CIDRBlock}}"]
{{ else -}}
  source_security_group_id = "{{.SourceSGGroupID}}"
{{ end -}}
  security_group_id        = "{{.SGID}}"
}
{{ end -}}
{{ end -}}
